--- a/tsconfig.json
+++ b/tsconfig.json
@@ -8,6 +8,13 @@
     "strict": true,
     "noImplicitOverride": true,
     "noPropertyAccessFromIndexSignature": true,
+    "skipLibCheck": true,
+    "paths": {
+      "@lego/components": [
+        "dist/lego"
+      ]
+    },
+    "types": ["@testing-library/cypress"],
     "noImplicitReturns": true,
     "noFallthroughCasesInSwitch": true,
     "sourceMap": true,
