--- a/.github/workflows/comp-test-only.yml
+++ b/.github/workflows/comp-test-only.yml
@@ -27,7 +27,7 @@ jobs:
       run: npm run build lego
 
     - name: Build the Angular App
-      run: npm run build -- --prod
+      run: npm run build -- --configuration prod
 
     - name: Build Storybook
       run: npm run build-storybook
