--- a/.github/workflows/build-and-test.yml
+++ b/.github/workflows/build-and-test.yml
@@ -35,7 +35,7 @@ jobs:
     - name: Run Component Tests
       uses: cypress-io/github-action@v6
       with:
-        working-directory: projects/**/*.cy.ts
+        working-directory: projects/lego/*
         component: true
 
     - name: Run E2E Tests
