--- a/package.json
+++ b/package.json
@@ -4,7 +4,9 @@
   "scripts": {
     "ng": "ng",
     "start": "ng serve",
-    "build": "ng build",
+    "build": "npm run build:library && npm run build:app",
+    "build:library": "ng build --project=lego",
+    "build:app": "ng build --project=checkout-demo-app --base-href ./",
     "watch": "ng build --watch --configuration development",
     "test": "ng test",
     "test:lib": "ng test lego",
