--- a/.github/workflows/build-and-test.yml
+++ b/.github/workflows/build-and-test.yml
@@ -32,7 +32,7 @@ jobs:
     - name: Run Component Tests
       uses: cypress-io/github-action@v6
       with:
-        working-directory: projects/lego/*
+        working-directory: projects/lego
         component: true
 
     - name: Run E2E Tests
