--- a/.github/workflows/comp-test-only.yml
+++ b/.github/workflows/comp-test-only.yml
@@ -29,5 +29,5 @@ jobs:
     - name: Run Component Tests
       uses: cypress-io/github-action@v6
       with:
-        working-directory: projects/lego
+        working-directory: .
         component: true
