--- a/package.json
+++ b/package.json
@@ -18,33 +18,33 @@
   },
   "private": true,
   "dependencies": {
-    "@angular/animations": "^18.2.13",
-    "@angular/common": "^18.2.13",
-    "@angular/compiler": "^18.2.13",
-    "@angular/core": "^18.2.13",
-    "@angular/forms": "^18.2.13",
-    "@angular/material": "^18.2.14",
-    "@angular/platform-browser": "^18.2.13",
-    "@angular/platform-browser-dynamic": "^18.2.13",
-    "@angular/router": "^18.2.13",
+    "@angular/animations": "^19.2.4",
+    "@angular/common": "^19.2.4",
+    "@angular/compiler": "^19.2.4",
+    "@angular/core": "^19.2.4",
+    "@angular/forms": "^19.2.4",
+    "@angular/material": "^19.2.7",
+    "@angular/platform-browser": "^19.2.4",
+    "@angular/platform-browser-dynamic": "^19.2.4",
+    "@angular/router": "^19.2.4",
     "rxjs": "~7.8.0",
     "tslib": "^2.3.0",
-    "zone.js": "~0.13.0"
+    "zone.js": "~0.15.0"
   },
   "devDependencies": {
-    "@angular-devkit/build-angular": "^18.2.16",
-    "@angular/cli": "~18.2.16",
-    "@angular/compiler-cli": "^18.2.13",
-    "@compodoc/compodoc": "^1.1.21",
+    "@angular-devkit/build-angular": "^19.2.5",
+    "@angular/cli": "~19.2.5",
+    "@angular/compiler-cli": "^19.2.4",
+    "@compodoc/compodoc": "1.1.26",
     "@cypress/schematic": "^2.5.1",
-    "@storybook/addon-essentials": "^7.4.4",
-    "@storybook/addon-interactions": "^7.4.4",
-    "@storybook/addon-links": "^7.4.4",
-    "@storybook/angular": "^7.4.4",
-    "@storybook/blocks": "^7.4.4",
+    "@storybook/addon-essentials": "8.6.11",
+    "@storybook/addon-interactions": "8.6.11",
+    "@storybook/addon-links": "8.6.11",
+    "@storybook/angular": "8.6.11",
+    "@storybook/blocks": "8.6.11",
     "@storybook/testing-library": "^0.2.1",
-    "@testing-library/cypress": "^10.0.1",
-    "@types/google.maps": "^3.54.1",
+    "@testing-library/cypress": "^10.0.3",
+    "@types/google.maps": "^3.58.1",
     "@types/jasmine": "~4.3.0",
     "cypress": "latest",
     "jasmine-core": "~4.6.0",
@@ -53,10 +53,10 @@
     "karma-coverage": "~2.2.0",
     "karma-jasmine": "~5.1.0",
     "karma-jasmine-html-reporter": "~2.1.0",
-    "ng-packagr": "^18.2.1",
+    "ng-packagr": "^19.2.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
-    "storybook": "^7.4.4",
-    "typescript": "~5.5.4"
+    "storybook": "8.6.11",
+    "typescript": "~5.7.2"
   }
 }
